Add execution script and update configuration files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,11 @@
 services:
-  kindle-scraper:
+  app:
     build: .
     container_name: kindle2keynote
     volumes:
-      - .:/app
+      - ./output:/app/output
+      - ./profile:/app/profile
+    environment:
+      - HEADLESS=${HEADLESS:-true}
+    stdin_open: true
     tty: true
